# fty-rest-mg

./: .dependencies-graph.dot.part  .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  Makefile.am  README.md  acinclude.m4  ci_build.sh  ci_dependencies.sh  ci_deploy.sh  ci_deploy_obs.sh  configure.ac  install.xml  license.xml  project.xml  tntnet-install.sh
bios-csv/: CMakeLists.txt  bios-csv.cc
builds/check_zproject/: ci_build.sh
builds/valgrind/: ci_build.sh
config/: .gitignore
doc/: .gitignore  Makefile.am  asciidoc.conf  db_topology2.doc  db_topology2.txt  fty-rest.adoc  fty_rest.adoc  msg_asset_msg.doc  msg_asset_msg.txt  msg_common_msg.doc  msg_common_msg.txt  web_src_location_helpers.doc  web_src_location_helpers.txt
ecpp/: add_gpio.ecpp  admin_iface.ecpp  admin_sse.ecpp  alert_ack.ecpp  alert_list.ecpp  alert_rules.ecpp  alert_rules_detail.ecpp  alert_rules_list.ecpp  alert_templates.ecpp  asset_POST.ecpp  asset_PUT.ecpp  asset_actions_GET.ecpp  asset_actions_POST.ecpp  asset_export.ecpp  asset_import.ecpp  asset_list.ecpp  assets_in.ecpp  average.ecpp  conf_scan.ecpp  config.ecpp  current.ecpp  datacenter_indicators.ecpp  email_feedback.ecpp  email_test.ecpp  email_vote.ecpp  getlog_GET.ecpp  gpo_action.ecpp  http_proxy.ecpp  hw_capability.ecpp  info.ecpp  license.ecpp  license_POST.ecpp  license_status.ecpp  list_gpio.ecpp  my_profile.ecpp  netcfg.ecpp  rack_total.ecpp  scan_progress.ecpp  scan_run.ecpp  security_headers.ecpp  (+8 more)
include/: Makefile.am  app.h  bios_agent++.h  bios_agent.h  bios_agentpp.h  bios_export.h  bios_magic.h  cleanup.h  dbtypes.h  defs.h  fty-rest.h  fty_rest.h  fty_rest_library.h  git_details_override.h  preproc.h  ymsg.h
include/db/: assetdef.h  assets.h  dbhelpers.h  topology2.h  types.h
include/db/agentstate/: agentstate.h
include/db/assets/: assetcr.h  assetd.h  assetr.h
include/db/inout/: exportcsv.h
include/msg/: asset_msg.h  common_msg.h
include/persist/: assetcrud.h
include/shared/: asset_types.h  augtool.h  cidr.h  configure_inform.h  csv.h  data.h  ic.h  str_defs.h  subprocess.h  tntmlm.h  topic_cache.h  upsstatus.h  utils.h  utils_json.h  utils_web.h  utilspp.h
include/web/src/: asset_computed_impl.h  helpers.h  iface.h  location_helpers.h  sse.h  tokens.h
misc/: tntnet-install.sh
obs/: debian.rules
packaging/debian/: changelog  control  copyright  fty-rest-clients.install  fty-rest-scripts.install  fty-rest.dsc.obs  libfty-rest-dev.install  libfty-rest1.install  rules
packaging/old-obs/: debian.copyright
packaging/redhat/: fty-rest.spec  fty_rest.spec
resources/: 00_start.xml  10_common_statics.xml  89_main_api_end.xml  99_end.xml
resources/tool-sed/: post-process-xml.sh  readme.txt
scripts/: CMakeLists.txt
scripts/src/: bios-passwd.in
src/: .gitignore  Makemodule-local.am  Makemodule.am  app.h  bios_agent.h  bios_agentpp.h  bios_magic.h  cleanup.h  dbtypes.h  fty_rest_classes.h  fty_rest_private_selftest.cc  fty_rest_selftest.cc  git_details_override.cc  libfty_rest.pc.in  platform.h.in  ymsg.h
src/db/: asset_general.cc  asset_general.h  bios-csv.cc  dbhelpers.h  inout.cc  inout.h  topology2.cc  types.h
src/db/agentstate/: agentstate.cc  agentstate.h
src/db/assets/: assetcr.cc  assetd.cc  assetr.cc  assetr.h  assetu.cc
src/db/inout/: exportcsv.cc  exportcsv.h  importcsv.cc  importcsv.h
src/include/: asset_computed_impl.h  asset_types.h  csv.h  dbpath.h  helpers.h  log.h  sse.h  tntmlm.h  topology2.h  utils.h  utils_json.h  utils_web.h
src/msg/: asset_msg.cc  common_msg.cc  common_msg.xml  license.xml  rozp.xml
src/persist/: assetcrud.cc  assetcrud.h  assettopology.cc  assettopology.h  dbhelpers.cc  dbhelpers.h  monitor.cc  monitor.h  persist_error.cc  persist_error.h
src/shared/: asset_types.cc  augtool.cc  augtool.h  cidr.cc  cidr.h  configure_inform.cc  configure_inform.h  csv.cc  csv.h  data.cc  data.h  dbpath.cc  filesystem.cc  fty_asset_uptime_configurator.cc  ic.c  ic.cc  ic.h  log.c  log.cc  magic.cc  magic.h  messagebus_utils.cc  messagebus_utils.h  str_defs.cc  subprocess.cc  tntmlm.cc  topic_cache.cc  topic_cache.h  upsstatus.cc  upsstatus.h  utils++.cc  utils.c  utils.cc  utils.h  utils_json.cc  utils_json.h  utils_web.cc  utilspp.cc  utilspp.h
src/warranty/: warranty-metric.cc  warranty-metric.h  warranty_metric.cc  warranty_metric.h
src/web/: .gitignore  20_common_basics.xml  50_main_api_start.xml  51_asset_api_fty-rest.xml  60_main_api_until_eula.xml  89_main_api_end.xml  README.txt  tntnet.xml
src/web/src/: Makemodule-local.am  add_gpio.ecpp  add_gpio.h  admin_iface.ecpp  admin_iface.h  admin_ifaces.ecpp  admin_ifaces.h  admin_passwd.ecpp.in  admin_passwd.h  admin_sse.ecpp  admin_sse.h  alert_ack.ecpp  alert_ack.h  alert_list.ecpp  alert_list.h  alert_rules.ecpp  alert_rules.h  alert_rules_detail.ecpp  alert_rules_detail.h  alert_rules_list.ecpp  alert_rules_list.h  alert_sse.ecpp  alert_templates.ecpp  alert_templates.h  asset_DELETE.ecpp  asset_DELETE.h  (+128 more)
tests/: run-test.sh  test-examples.cc  test-run.cc  web-linking-test.cc
tests/cli/: test-cli.cc
tests/db/: bios-csv.cc
tests/include/: catch.hpp
tests/persist/: test-asset-crud.cc  test-asset-crud1.cc  test-dc-power.cc  test-loadcsv.cc  test-loadcsv.cc.rc0_1.csv  test-loadcsv.cc.rc0_2.csv  test-loadcsv.cc.rc0_4.csv  test-loadcsv.cc.rc0_6.csv  test-rack-power.cc  test-realdatamonitor.cc  test-topology-location-from.cc  test-topology-location-to.cc  test-topology-power-datacenter.cc  test-topology-power-from.cc  test-topology-power-group.cc  test-topology-power-to.cc  test-topology.cc
tests/shared/: test-cidr.cc  test-csv.cc  test-csv.cc.rc0_2.csv  test-csv.cc.rc0_2a.csv  test-csv.cc.rc0_3.csv  test-csv.cc.rc0_5.csv  test-csv.cc.rc0_6.csv  test-log.cc  test-subprocess.cc  test-tntmlm.cc  test-utils++.cc  test-utils-web.cc  test-utils.cc
tools/: JSON.sh  astyle-bios  bios-passwd.in  bios_agent++.h.in  bios_agent++.h.sh  builder.sh  dbinit.h  git_details.sh  testpass.sh
zproject-hold/doc/: asciidoc.conf
zproject-hold/old-obs/: debian.copyright
zproject-hold/tests/: run-test.sh
(+12 files in other folders)
